(fix) O3-2763: Fixed form overflow

--- a/projects/ngx-formentry/src/components/ngx-tabset/components/ngx-tab-set.component.scss
+++ b/projects/ngx-formentry/src/components/ngx-tabset/components/ngx-tab-set.component.scss
@@ -115,11 +115,6 @@
 }
 
 .tab-container {
-  height: inherit;
   display: grid;
   grid-template-columns: 179px auto;
-}
-
-.tab-content {
-  overflow-x: hidden;
 }
