--- a/projects/ngx-formentry/src/form-entry/form-renderer/form-renderer.component.scss
+++ b/projects/ngx-formentry/src/form-entry/form-renderer/form-renderer.component.scss
@@ -233,12 +233,3 @@ ng-select.form-control {
     border-width: 1px 1px 0 0;
   }
 }
-
-.form-renderer-container {
-  height: inherit;
-}
-
-.form-renderer-tab-set {
-  display: block;
-  height: inherit;
-}
